# HyperID-SDK

android/: build.gradle.kts  local.properties  readme.md  settings.gradle.kts
android/hyperid_sdk/: build.gradle.kts
android/sample/: build.gradle.kts  proguard-rules.pro
api/user_wallets/: user_wallet_add.md  user_wallets_available_chains_get.md  user_wallets_by_tag_get.md  user_wallets_get.md
cs/: hyper_id_sdk.sln  readme.md
cs/auth/: hyper_id_sdk.cs  hyper_id_sdk.csproj
cs/demo/: Program.cs  hyperid_sdk_demo.csproj
js/: index.html  package.json  readme.md  webpack.config.js
js/src/: index.js  polyfill.js
js/widget/: index.html  package.json  readme.md  webpack.config.js
php/: copy_auth_to_plugin.bat  readme.md
php/hyperid-wp-auth-plugin/: readme.txt  (+4 more)
python/: pyproject.toml  readme.md
python/hyperid/: error.py  error_rfc6749.py
python/hyperid/auth/: auth.py  auth_token.py  client_info.py  discover.py  enum.py  user_info.py
python/hyperid/kyc/: enum.py  kyc_api.py  result.py
python/hyperid/mfa/: enum.py  mfa_api.py
python/hyperid/sdk/: sdk.py
python/hyperid/storage/: enum.py
python/hyperid/storage/email/: email_api.py  enum.py  result.py
python/hyperid/storage/identity_provider/: enum.py  identity_provider_api.py  result.py
python/hyperid/storage/user_id/: enum.py  result.py  user_id_api.py
python/hyperid/storage/wallet/: enum.py  result.py  wallet_api.py
python/test/: auth.py  auth_test_sdk.py
python/test/static/: main.css
python/test/templates/: layout.html  page.html
react-native/: README.md
swift/: README.md
(+323 files in other folders)
